Tue Oct 16 11:44:15 2007 CEST
(Magic): detection of ZIP and XBase files added